--- a/index.html
+++ b/index.html
@@ -13,7 +13,38 @@
 </head>
 
 <body>
-  <!-- START HERE -->
+  <!-- NAVBAR -->
+
+  <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
+    <!-- NAVBAR BRANDING -->
+    <div class="container">
+      <a href="#home" class="navbar-brand">
+        <img src="img/mlogo.png" alt="logo" width="50" height="50">
+        <h3 class="d-inline align-middle">Mizuxe</h3>
+      </a>
+      <!-- NAVBAR TOGGLE ICON - HAMBURGER MENU ON MEDIUM SCREENS  -->
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- COLLAPSIBLE NAVABR   -->
+      <div id="navbarCollapse" class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="#home" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#about" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#authors" class="nav-link">Meet The Authors</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
